2014-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/xxhash.c: Applied pull request #6 by Jim Hester with updated
	upstream code and already corrected UBSAN issue identified by CRAN

2014-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Version 0.6.6

	* DESCRIPTION (Date): Bumped Date: to current date
	
	* src/digest.c: Applied pull request #5 by Jim Hester providing
	portable integer printing inttypes.h header

2014-12-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Version 0.6.5

	* DESCRIPTION (Date): Bumped Date: to current date

	* NAMESPACE: Expanded useDynLib() declaring C level symbols, in
	particular using digest_impl to for the C-level digest

	* R/AES.R: Use R symbols from NAMESPACE declaration in .Call()
	* R/digest.R: Use R symbol digest_impl to load C level digest

2014-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Edited Title and Description

	* R/digest.R: Added GPL copyright header, reindented to four spaces

	* src/digest.c: Reindented to four spaces

	* R/AES.R: Reindented to four spaces
	* R/hmac.R: Reindented to four spaces

2014-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/digest.c: Updated GPL copyright header

	* src/xxhash.c:	Removed two spurious ';'

	* man/digest.Rd: Document 'seed' argument in \usage

	* tests/digest.Rout.save: Updated for expanded tests

	* DESCRIPTION: Add Jim Hester to list of Authors

2014-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* R/digest.R: Applied pull request #3 by Jim Hester with support for
	xxHash (https://code.google.com/p/xxhash/)
	* src/digest.c: Ditto
	
	* src/xxhash.c: xxHash implementation supplied as part of #3
	* src/xxhash.h: xxHash implementation supplied as part of #3

	* R/digest.R: Applied pull request #4 by Jim Hester with expanded
	support for xxHash providing xxhash32 and xxhash64
	* src/digest.c: Ditto
	* man/digest.Rd: Added documentation for xxHash, corrected typos