@@ -18,18 +18,14 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with digest.  If not, see <http://www.gnu.org/licenses/>.
 
-digest <- function(object,
-  algo=c(
-         "md5",
-         "sha1",
-         "crc32",
-         "sha256",
-         "sha512",
-         "xxhash32",
-         "xxhash64",
-         "murmur32"),
-  serialize=TRUE, file=FALSE, length=Inf,
-  skip="auto", ascii=FALSE, raw=FALSE, seed=0) {
+digest <- function(object, algo=c("md5", "sha1", "crc32", "sha256", "sha512",
+                           "xxhash32", "xxhash64", "murmur32"),
+                   serialize=TRUE, file=FALSE, length=Inf,
+                   skip="auto", ascii=FALSE, raw=FALSE, seed=0) {
+    algo <- match.arg(algo)
+    if (is.infinite(length)) {
+        length <- -1               # internally we use -1 for infinite len
+    }
 
     if (is.character(file) && missing(object)) {
         object <- file
@@ -70,8 +66,7 @@ digest <- function(object,
                       sha512=5,
                       xxhash32=6,
                       xxhash64=7,
-                      murmur32=8,
-                      )
+                      murmur32=8)
     if (file) {
         algoint <- algoint+100
         object <- path.expand(object)
